# neodb

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  TODO.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: api.md  index.md
docs/source/: FileBackend.rst  FileSystemDB.rst  InMemoryBackend.rst  MemoryDB.rst  conf.py  index.rst  neodb.rst
examples/: emre.py  tinydb_usage.py  usage.py
lab/key-value-collection/: adr_collection.ipynb
neodb/: __init__.py  core.py
src/: BackEnd.py  FileBackend.py  InMemoryBackend.py  main.py
src/neodb/: AwsS3DB.py  BackEnd.py  FileSystemDB.py  MemoryDB.py  __init__.py  __version__.py  main.py
tests/: load_test.sh  load_testing.py  manual_load.py  test_AwsS3DB.py  test_FileBackend.py  test_FileSystemDB.py  test_InMemoryBackend.py  test_MemoryDB.py  test_core.py  test_main.http  test_main.py
