[project]
name = "neodb"
version = "0.0.2"
description = "a simple module for a document store"
readme = "README.md"
authors = [{name="emre"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
]

keywords = ["database", "document store", "key value"]

dependencies = ["fastapi"]

[project.urls]
Homepage = 'https://github.com/eyukselen/neodb'
"Source Code" = 'https://github.com/eyukselen/neodb'
Documentation = 'https://neodb.readthedocs.io/en/latest/index.html'
